# OpenXML-Inspector

./: .gitignore  README.md  generate_icon.py  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  vkbeautify.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: CodeEditor.vue  FilePreview.vue  FileTree.vue
src/data/: openxmlRules.ts
src/data/rules/: packaging.ts  presentation-drawing.ts  spreadsheet.ts  types.ts  wordprocessing.ts
