[package]
name = "openxml-inspector"
version = "0.1.0"
description = "OpenXML Inspector tool"
authors = ["Eiinu"]
edition = "2021"
resolver = "2"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.0", features = ["tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSString"] }
